tests/ui/imports/issue-45799-bad-extern-crate-rename-suggestion-formatting.stderr
error[E0259]: the name `std` is defined multiple times
  --> $DIR/issue-45799-bad-extern-crate-rename-suggestion-formatting.rs:3:1
   |
LL | extern crate std;
   | ^^^^^^^^^^^^^^^^^ `std` reimported here
   |
   = note: `std` must be defined only once in the type namespace of this module
help: you can use `as` to change the binding name of the import
   |
LL | extern crate std as other_std;
   |                  ++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0259`.
