tests/ui/imports/issue-45799-bad-extern-crate-rename-suggestion-formatting.rs
//@ run-rustfix

extern crate std;
fn main() {}
//~^^ ERROR the name `std` is defined multiple times [E0259]
